@@ -4,6 +4,6 @@ AUX openfoam-utilities-compile-1.4.1_p20080328.patch 996 RMD160 0debfeb112bed547
 DIST OpenFOAM-1.4.1.General.gtgz 148526808 RMD160 e25d8bdfa63f15eeeb7b9f1cef09cc26fb7bef74 SHA1 56bbbf5b33c49d08cda35088a65b24d7dc59014f SHA256 c765b36639b42c737bc9ba1ac13c0f66efe20ee4a9f71a6ef987e86ebd50da28
 DIST OpenFOAM-1.5.General.gtgz 117334661 RMD160 bccaa9f8f99d31aa6c791d40b30dd9ad4f534041 SHA1 3577f562dc1f54bb32e1e0ef43f979418212c2f7 SHA256 d4cba2d9475523a53cea80b8d39da70d12bfffb9f46e2d1442946ba4a23efd31
 EBUILD openfoam-utilities-1.4.1_p20080328.ebuild 4309 RMD160 96f6a2f718165dad1e0fad0256dd957e60c503dc SHA1 66c1d32b662048e1e0112a3c3fadfa943fd84991 SHA256 6754bf31cc700a26834469955882ed76d6b7e343bac8e1ba104e50a364752715
-EBUILD openfoam-utilities-1.5.ebuild 2132 RMD160 b0e0dbf7d20700fdd063d4214bb7d9c6fe8a3927 SHA1 6f643ac9ef10532fb69ea7f8229eaa7cd9b86867 SHA256 b82cd75eb73d77ab6f34f3eaf4f7132b82ec419e498645d0c4fcbae8faca7fd1
-MISC ChangeLog 1412 RMD160 7a495e92726d31b0dcc20a628d0a2458e1f0e910 SHA1 c1f9ecd8d38eaf6cfbf8f4ac26a0e75fdb935aa4 SHA256 c2704b5d613d231104f16f056b48f9ada74ad0b92ad58a4b221b65331eabb9bd
+EBUILD openfoam-utilities-1.5.ebuild 2215 RMD160 562276f663ef91de88dd22bf705dd169debf8622 SHA1 da264cd673af19df06859e63aa9522df5d1d3a63 SHA256 3daeebf4ad19241143e9fa607a6c1efb599fceb83a7c546e129312898b1de6ce
+MISC ChangeLog 1549 RMD160 31891e88400b629eecec12a553d9197f844f3385 SHA1 a59c3e1fdaa5e2c3c4bdffb783d0709edf84c688 SHA256 e6d8e27918c1ac3c20b9c4e092a0e27603df69018576e3d611c4de44df5bae8b
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
